<resources>
    <string name="app_name">Twittor</string>

    <string name="whatshappening">Mira lo que está sucediendo en el mundo ahora mismo</string>
    <string name="createAccount">Crear Cuenta</string>
    <string name="haveAccount">Ya tengo una cuenta</string>

    <string name="creaCuenta">Crea tu cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="mail">Correo</string>
    <string name="password">Contraseña</string>
    <string name="back">back</string>
    <string name="next">Siguiente</string>

    <string name="setpasstxt">Establece la contraseña</string>
    <string name="rewritepass">Reescribe la contraseña</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="twoot">Twoot</string>
    <string name="username">userName</string>
    <string name="usermail">user.mail@mail.com</string>
    <string name="twoots">Twoots</string>
    <string name="likes">Likes</string>
    <string name="mis_twoots">Mis twoots</string>
    <string name="correo">Correo</string>
    <string name="exit">exit</string>
</resources>